--- a/.redcar/storage/project_loader.yaml
+++ b/.redcar/storage/project_loader.yaml
@@ -3,3 +3,10 @@ open_files:
   - public/index.html
   - README.md
   - Gemfile
+  - config/routes.rb
+  - app/controllers/static_pages_controller.rb
+  - app/views/static_pages/home.html.erb
+  - spec/requests/static_pages_spec.rb
+  - app/views/static_pages/help.html.erb
+  - app/views/static_pages/about.html.erb
+  - app/views/layouts/application.html.erb
