--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -3,6 +3,9 @@ cursor_positions:
   - :path: public/hello.html
     :cursor_offset: 121
     :timestamp: 2013-05-17 09:40:41 +02:00
+  - :path: "app/views/layouts/_footer.html.erb "
+    :cursor_offset: 325
+    :timestamp: 2013-05-20 20:02:57 +02:00
   - :path: public/index.html
     :cursor_offset: 0
     :timestamp: 2013-05-15 21:45:17 +02:00
@@ -10,33 +13,57 @@ cursor_positions:
     :cursor_offset: 0
     :timestamp: 2013-05-15 21:52:48 +02:00
   - :path: config/routes.rb
-    :cursor_offset: 121
-    :timestamp: 2013-05-17 10:31:27 +02:00
+    :cursor_offset: 37
+    :timestamp: 2013-05-21 21:11:24 +02:00
   - :path: app/controllers/static_pages_controller.rb
-    :cursor_offset: 107
-    :timestamp: 2013-05-17 10:32:34 +02:00
+    :cursor_offset: 122
+    :timestamp: 2013-05-20 11:29:17 +02:00
   - :path: app/views/static_pages/home.html.erb
-    :cursor_offset: 0
-    :timestamp: 2013-05-17 11:00:46 +02:00
+    :cursor_offset: 370
+    :timestamp: 2013-05-20 19:42:54 +02:00
   - :path: spec/requests/static_pages_spec.rb
-    :cursor_offset: 1187
-    :timestamp: 2013-05-17 10:50:21 +02:00
+    :cursor_offset: 902
+    :timestamp: 2013-05-21 21:24:12 +02:00
   - :path: app/views/static_pages/help.html.erb
-    :cursor_offset: 281
-    :timestamp: 2013-05-17 11:00:59 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-17 11:04:27 +02:00
   - :path: app/views/static_pages/about.html.erb
-    :cursor_offset: 311
-    :timestamp: 2013-05-17 11:01:15 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-17 11:04:27 +02:00
   - :path: app/views/layouts/application.html.erb
-    :cursor_offset: 300
-    :timestamp: 2013-05-17 11:02:32 +02:00
+    :cursor_offset: 423
+    :timestamp: 2013-05-20 20:03:17 +02:00
+  - :path: app/views/static_pages/contact.html.erb
+    :cursor_offset: 182
+    :timestamp: 2013-05-20 11:35:17 +02:00
+  - :path: config/database.yml
+    :cursor_offset: 637
+    :timestamp: 2013-05-20 12:21:29 +02:00
+  - :path: Guardfile
+    :cursor_offset: 1185
+    :timestamp: 2013-05-20 14:16:33 +02:00
   - :path: Gemfile
-    :cursor_offset: 620
-    :timestamp: 2013-05-20 14:10:26 +02:00
-  - :path: "app/views/layouts/_footer.html.erb "
-    :cursor_offset: 325
-    :timestamp: 2013-05-20 20:02:57 +02:00
+    :cursor_offset: 99
+    :timestamp: 2013-05-20 19:48:44 +02:00
+  - :path: spec/spec_helper.rb
+    :cursor_offset: 1620
+    :timestamp: 2013-05-20 14:12:53 +02:00
+  - :path: app/helpers/application_helper.rb
+    :cursor_offset: 262
+    :timestamp: 2013-05-20 14:37:00 +02:00
+  - :path: app/assets/stylesheets/custom.css.scss
+    :cursor_offset: 1265
+    :timestamp: 2013-05-20 20:13:13 +02:00
+  - :path: app/views/layouts/_shim.html.erb
+    :cursor_offset: 105
+    :timestamp: 2013-05-20 20:01:22 +02:00
   - :path: app/views/layouts/_header.html.erb
-    :cursor_offset: 415
-    :timestamp: 2013-05-20 20:02:02 +02:00
+    :cursor_offset: 433
+    :timestamp: 2013-05-21 21:17:05 +02:00
+  - :path: app/views/layouts/_footer.html.erb
+    :cursor_offset: 341
+    :timestamp: 2013-05-21 21:17:31 +02:00
+  - :path: spec/support/utilities.rb
+    :cursor_offset: 168
+    :timestamp: 2013-05-21 21:23:16 +02:00
 files_to_retain: 0
