--- a/.redcar/storage/project_loader.yaml
+++ b/.redcar/storage/project_loader.yaml
@@ -2,7 +2,6 @@
 open_files: 
   - public/index.html
   - README.md
-  - Gemfile
   - config/routes.rb
   - app/controllers/static_pages_controller.rb
   - app/views/static_pages/home.html.erb
@@ -10,3 +9,14 @@ open_files:
   - app/views/static_pages/help.html.erb
   - app/views/static_pages/about.html.erb
   - app/views/layouts/application.html.erb
+  - app/views/static_pages/contact.html.erb
+  - config/database.yml
+  - Guardfile
+  - Gemfile
+  - spec/spec_helper.rb
+  - app/helpers/application_helper.rb
+  - app/assets/stylesheets/custom.css.scss
+  - app/views/layouts/_shim.html.erb
+  - app/views/layouts/_header.html.erb
+  - app/views/layouts/_footer.html.erb
+  - spec/support/utilities.rb
