--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -13,14 +13,14 @@ cursor_positions:
     :cursor_offset: 0
     :timestamp: 2013-05-15 21:52:48 +02:00
   - :path: config/routes.rb
-    :cursor_offset: 37
-    :timestamp: 2013-05-21 21:11:24 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/controllers/static_pages_controller.rb
     :cursor_offset: 122
     :timestamp: 2013-05-20 11:29:17 +02:00
   - :path: app/views/static_pages/home.html.erb
-    :cursor_offset: 370
-    :timestamp: 2013-05-20 19:42:54 +02:00
+    :cursor_offset: 299
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/views/static_pages/help.html.erb
     :cursor_offset: 0
     :timestamp: 2013-05-17 11:04:27 +02:00
@@ -28,20 +28,20 @@ cursor_positions:
     :cursor_offset: 0
     :timestamp: 2013-05-17 11:04:27 +02:00
   - :path: app/views/layouts/application.html.erb
-    :cursor_offset: 423
-    :timestamp: 2013-05-20 20:03:17 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/views/static_pages/contact.html.erb
     :cursor_offset: 182
     :timestamp: 2013-05-20 11:35:17 +02:00
   - :path: config/database.yml
-    :cursor_offset: 637
-    :timestamp: 2013-05-20 12:21:29 +02:00
+    :cursor_offset: 663
+    :timestamp: 2013-05-25 13:10:34 +02:00
   - :path: Guardfile
-    :cursor_offset: 1185
-    :timestamp: 2013-05-20 14:16:33 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: Gemfile
-    :cursor_offset: 99
-    :timestamp: 2013-05-20 19:48:44 +02:00
+    :cursor_offset: 188
+    :timestamp: 2013-05-22 21:26:58 +02:00
   - :path: spec/spec_helper.rb
     :cursor_offset: 1620
     :timestamp: 2013-05-20 14:12:53 +02:00
@@ -49,23 +49,59 @@ cursor_positions:
     :cursor_offset: 262
     :timestamp: 2013-05-20 14:37:00 +02:00
   - :path: app/assets/stylesheets/custom.css.scss
-    :cursor_offset: 1265
-    :timestamp: 2013-05-20 20:13:13 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/views/layouts/_shim.html.erb
-    :cursor_offset: 105
-    :timestamp: 2013-05-20 20:01:22 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/views/layouts/_header.html.erb
-    :cursor_offset: 433
-    :timestamp: 2013-05-21 21:17:05 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/views/layouts/_footer.html.erb
-    :cursor_offset: 341
-    :timestamp: 2013-05-21 21:17:31 +02:00
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: spec/support/utilities.rb
-    :cursor_offset: 168
-    :timestamp: 2013-05-21 21:23:16 +02:00
+    :cursor_offset: 27
+    :timestamp: 2013-05-22 21:10:14 +02:00
+  - :path: app/controllers/users_controller.rb
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
+  - :path: app/views/users/new.html.erb
+    :cursor_offset: 50
+    :timestamp: 2013-05-22 20:40:38 +02:00
+  - :path: spec/requests/user_pages_spec.rb
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 20:40:38 +02:00
+    :selection_offset: 21
+    :block_selection_mode: false
+  - :path: spec/helpers/application_helper_spec.rb
+    :cursor_offset: 406
+    :timestamp: 2013-05-22 21:08:09 +02:00
   - :path: spec/requests/static_pages_spec.rb
     :cursor_offset: 21
-    :timestamp: 2013-05-22 21:08:51 +02:00
-    :selection_offset: 0
-    :block_selection_mode: false
+    :timestamp: 2013-05-22 21:11:04 +02:00
+  - :path: app/models/user.rb
+    :cursor_offset: 341
+    :timestamp: 2013-05-25 13:13:46 +02:00
+  - :path: script/rails
+    :cursor_offset: 0
+    :timestamp: 2013-05-15 21:45:17 +02:00
+  - :path: doc/README_FOR_APP
+    :cursor_offset: 0
+    :timestamp: 2013-05-15 21:45:17 +02:00
+  - :path: db/schema.rb
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 21:21:53 +02:00
+  - :path: db/development.sqlite3
+    :cursor_offset: 0
+    :timestamp: 2013-05-15 21:51:01 +02:00
+  - :path: db/test.sqlite3
+    :cursor_offset: 0
+    :timestamp: 2013-05-17 10:14:43 +02:00
+  - :path: db/migrate/20130522192021_create_users.rb
+    :cursor_offset: 0
+    :timestamp: 2013-05-22 21:20:21 +02:00
+  - :path: spec/models/user_spec.rb
+    :cursor_offset: 455
+    :timestamp: 2013-05-25 12:58:22 +02:00
 files_to_retain: 0
