--- a/.redcar/storage/project_loader.yaml
+++ b/.redcar/storage/project_loader.yaml
@@ -1,11 +1,9 @@
 --- 
 open_files: 
-  - public/index.html
   - README.md
   - config/routes.rb
   - app/controllers/static_pages_controller.rb
   - app/views/static_pages/home.html.erb
-  - spec/requests/static_pages_spec.rb
   - app/views/static_pages/help.html.erb
   - app/views/static_pages/about.html.erb
   - app/views/layouts/application.html.erb
@@ -20,3 +18,16 @@ open_files:
   - app/views/layouts/_header.html.erb
   - app/views/layouts/_footer.html.erb
   - spec/support/utilities.rb
+  - app/controllers/users_controller.rb
+  - app/views/users/new.html.erb
+  - spec/requests/user_pages_spec.rb
+  - spec/helpers/application_helper_spec.rb
+  - spec/requests/static_pages_spec.rb
+  - app/models/user.rb
+  - script/rails
+  - doc/README_FOR_APP
+  - db/schema.rb
+  - db/development.sqlite3
+  - db/test.sqlite3
+  - db/migrate/20130522192021_create_users.rb
+  - spec/models/user_spec.rb
