--- a/config/database.yml
+++ b/config/database.yml
@@ -11,8 +11,8 @@ development:
 test:
   adapter: postgresql
   host: localhost
-  username: stefan
-  password: stef&kat2
+  username: username
+  password: password
   database: app_test
   pool: 5
   timeout: 5000  
