--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -109,4 +109,7 @@ cursor_positions:
     :timestamp: 2013-05-27 21:43:55 +02:00
     :selection_offset: 254
     :block_selection_mode: false
+  - :path: app/views/shared/_error_messages.html.erb
+    :cursor_offset: 0
+    :timestamp: 2013-05-28 21:05:43 +02:00
 files_to_retain: 0
