--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   host: localhost
   username: username
@@ -26,3 +26,6 @@ production:
   port: 5432
   pool: 5
   timeout: 5000
+
+cucumber:
+  <<: *test
