changing form_tag

--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -39,15 +39,9 @@ cursor_positions:
   - :path: app/views/layouts/_shim.html.erb
     :cursor_offset: 0
     :timestamp: 2013-05-22 20:40:38 +02:00
-  - :path: app/views/layouts/_header.html.erb
-    :cursor_offset: 0
-    :timestamp: 2013-05-22 20:40:38 +02:00
   - :path: app/views/layouts/_footer.html.erb
     :cursor_offset: 0
     :timestamp: 2013-05-22 20:40:38 +02:00
-  - :path: spec/support/utilities.rb
-    :cursor_offset: 27
-    :timestamp: 2013-05-22 21:10:14 +02:00
   - :path: spec/helpers/application_helper_spec.rb
     :cursor_offset: 406
     :timestamp: 2013-05-22 21:08:09 +02:00
@@ -75,42 +69,6 @@ cursor_positions:
   - :path: db/migrate/20130527185610_add_index_to_users_email.rb
     :cursor_offset: 118
     :timestamp: 2013-05-27 20:56:39 +02:00
-  - :path: config/database.yml
-    :cursor_offset: 396
-    :timestamp: 2013-05-27 21:10:45 +02:00
-  - :path: spec/models/user_spec.rb
-    :cursor_offset: 1293
-    :timestamp: 2013-05-28 20:10:52 +02:00
-  - :path: app/models/user.rb
-    :cursor_offset: 610
-    :timestamp: 2013-05-28 20:12:06 +02:00
-  - :path: app/views/layouts/application.html.erb
-    :cursor_offset: 458
-    :timestamp: 2013-05-28 21:12:36 +02:00
-  - :path: app/assets/stylesheets/custom.css.scss
-    :cursor_offset: 2323
-    :timestamp: 2013-05-28 21:07:55 +02:00
-  - :path: config/routes.rb
-    :cursor_offset: 60
-    :timestamp: 2013-05-28 20:27:39 +02:00
-  - :path: app/views/users/show.html.erb
-    :cursor_offset: 205
-    :timestamp: 2013-05-28 20:44:02 +02:00
-  - :path: app/controllers/users_controller.rb
-    :cursor_offset: 329
-    :timestamp: 2013-05-28 21:15:27 +02:00
-  - :path: spec/requests/user_pages_spec.rb
-    :cursor_offset: 1173
-    :timestamp: 2013-05-28 20:49:06 +02:00
-  - :path: Gemfile
-    :cursor_offset: 658
-    :timestamp: 2013-05-28 20:34:02 +02:00
-  - :path: app/views/users/new.html.erb
-    :cursor_offset: 176
-    :timestamp: 2013-05-28 21:05:00 +02:00
-  - :path: config/environments/production.rb
-    :cursor_offset: 1145
-    :timestamp: 2013-05-28 21:15:49 +02:00
   - :path: db/migrate/20130530144922_add_remember_token_to_users.rb
     :cursor_offset: 162
     :timestamp: 2013-05-30 17:09:04 +02:00
@@ -131,7 +89,70 @@ cursor_positions:
   - :path: app/views/shared/_error_messages.html.erb
     :cursor_offset: 0
     :timestamp: 2013-05-28 21:15:27 +02:00
+  - :path: config/database.yml
+    :cursor_offset: 396
+    :timestamp: 2013-05-27 21:10:45 +02:00
+  - :path: spec/models/user_spec.rb
+    :cursor_offset: 3539
+    :timestamp: 2013-05-30 17:14:08 +02:00
+  - :path: app/models/user.rb
+    :cursor_offset: 516
+    :timestamp: 2013-05-30 20:32:43 +02:00
+  - :path: app/views/layouts/application.html.erb
+    :cursor_offset: 340
+    :timestamp: 2013-05-30 15:44:25 +02:00
+  - :path: app/assets/stylesheets/custom.css.scss
+    :cursor_offset: 0
+    :timestamp: 2013-05-28 21:15:27 +02:00
+  - :path: config/routes.rb
+    :cursor_offset: 40
+    :timestamp: 2013-05-30 16:14:31 +02:00
+  - :path: app/views/users/show.html.erb
+    :cursor_offset: 140
+    :timestamp: 2013-05-30 15:34:28 +02:00
+  - :path: app/controllers/users_controller.rb
+    :cursor_offset: 226
+    :timestamp: 2013-05-30 19:58:08 +02:00
+  - :path: spec/requests/user_pages_spec.rb
+    :cursor_offset: 1705
+    :timestamp: 2013-05-30 19:59:12 +02:00
+  - :path: Gemfile
+    :cursor_offset: 743
+    :timestamp: 2013-05-30 20:03:21 +02:00
+  - :path: app/views/users/new.html.erb
+    :cursor_offset: 0
+    :timestamp: 2013-05-28 21:15:27 +02:00
+  - :path: config/environments/production.rb
+    :cursor_offset: 1145
+    :timestamp: 2013-05-28 21:15:49 +02:00
+  - :path: config/locales/en.yml
+    :cursor_offset: 271
+    :timestamp: 2013-05-30 15:38:02 +02:00
+  - :path: spec/requests/authentication_pages_spec.rb
+    :cursor_offset: 1362
+    :timestamp: 2013-05-30 19:59:38 +02:00
+  - :path: app/views/sessions/new.html.erb
+    :cursor_offset: 453
+    :timestamp: 2013-05-30 16:27:04 +02:00
+  - :path: app/helpers/sessions_helper.rb
+    :cursor_offset: 443
+    :timestamp: 2013-05-30 20:00:51 +02:00
   - :path: app/controllers/sessions_controller.rb
-    :cursor_offset: 353
-    :timestamp: 2013-05-30 16:46:07 +02:00
+    :cursor_offset: 357
+    :timestamp: 2013-05-30 20:00:18 +02:00
+  - :path: features/signing_in.feature
+    :cursor_offset: 418
+    :timestamp: 2013-05-30 20:05:42 +02:00
+  - :path: features/step_definitions/authentication_steps.rb
+    :cursor_offset: 808
+    :timestamp: 2013-05-30 20:08:24 +02:00
+  - :path: spec/support/utilities.rb
+    :cursor_offset: 311
+    :timestamp: 2013-05-30 20:11:54 +02:00
+  - :path: app/assets/javascripts/application.js
+    :cursor_offset: 0
+    :timestamp: 2013-05-30 20:11:54 +02:00
+  - :path: app/views/layouts/_header.html.erb
+    :cursor_offset: 0
+    :timestamp: 2013-05-30 20:11:54 +02:00
 files_to_retain: 0
