--- a/.redcar/storage/project_loader.yaml
+++ b/.redcar/storage/project_loader.yaml
@@ -10,9 +10,15 @@ open_files:
   - app/controllers/users_controller.rb
   - spec/requests/user_pages_spec.rb
   - Gemfile
-  - spec/factories.rb
-  - config/environments/test.rb
-  - app/helpers/users_helper.rb
   - app/views/users/new.html.erb
-  - app/views/shared/_error_messages.html.erb
   - config/environments/production.rb
+  - config/locales/en.yml
+  - spec/requests/authentication_pages_spec.rb
+  - app/views/sessions/new.html.erb
+  - app/helpers/sessions_helper.rb
+  - app/views/layouts/_header.html.erb
+  - app/assets/javascripts/application.js
+  - app/controllers/sessions_controller.rb
+  - features/signing_in.feature
+  - features/step_definitions/authentication_steps.rb
+  - spec/support/utilities.rb
