--- a/.redcar/storage/project_loader.yaml
+++ b/.redcar/storage/project_loader.yaml
@@ -1,29 +1,3 @@
 --- 
-open_files: 
-  - config/database.yml
-  - spec/models/user_spec.rb
-  - app/models/user.rb
-  - app/views/layouts/application.html.erb
-  - app/assets/stylesheets/custom.css.scss
-  - config/routes.rb
-  - app/views/users/show.html.erb
-  - app/controllers/users_controller.rb
-  - spec/requests/user_pages_spec.rb
-  - Gemfile
-  - app/views/users/new.html.erb
-  - config/environments/production.rb
-  - config/locales/en.yml
-  - spec/requests/authentication_pages_spec.rb
-  - app/views/sessions/new.html.erb
-  - app/helpers/sessions_helper.rb
-  - app/views/layouts/_header.html.erb
-  - app/assets/javascripts/application.js
-  - app/controllers/sessions_controller.rb
-  - features/signing_in.feature
-  - features/step_definitions/authentication_steps.rb
-  - spec/support/utilities.rb
-  - app/views/users/index.html.erb
-  - app/views/users/_user.html.erb
-  - db/migrate/20130603191024_add_admin_to_users.rb
-  - lib/tasks/sample_data.rake
-  - spec/factories.rb
+open_files: []
+
